--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Catalan Skin File --> <!-- This translation is based on default-en.xml SVN rev.6090 + ~1 -->
+<!-- Shareaza Default Catalan Skin File -->
+<!-- Translation based on default-en.xml SVN rev.6090 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -16,7 +17,7 @@
 		updatedBy="Equip de traduccions de FeshoCAT (TraduCAT, http://tradu.feshocat.cat)"
 		description="Shareaza Default Catalan Skin File"
 		link="http://tradu.feshocat.cat/"
-		email="tradu(at)feshocat(dot)cat"
+		email="tradu(at)feshocat.cat"
 		version="2.3.0.0"
 		type="Language"
 		language="ca"
@@ -1491,11 +1492,6 @@
 		<item id="ImageViewer_Close" text="_Tanca"/>
 	</menu>
 </menus>
-<!-- Watermarks -->
-<watermarks>
-	<watermark target="CHomeViewCtrl.Header" path="257.PNG"/>
-	<watermark target="CHomeViewCtrl.Header" path="258.PNG"/>
-</watermarks>
 <!-- Documents -->
 <documents>
 	<!-- Home View -->
