--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default International Spanish Skin File --> <!-- This translation is based on default-en.xml SVN rev.6090 + ~1 -->
+<!-- Shareaza Default International Spanish Skin File -->
+<!-- Translation based on default-en.xml SVN rev.6090 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -16,7 +17,7 @@
 		updatedBy="ramdomcrazy"
 		description="Shareaza Default International Spanish Skin File"
 		link="http://shareaza.sourceforge.net/"
-		email="ramdomcrazy(at)users.sourceforge(dot)net"
+		email="ramdomcrazy(at)users.sourceforge.net"
 		version="2.3.0.0"
 		type="Language"
 		language="es"
@@ -1487,12 +1488,6 @@
 		<item id="ImageViewer_Close" text="_Cerrar"/>
 	</menu>
 </menus>
-
-<!-- Watermarks -->
-<watermarks>
-	<watermark target="CHomeViewCtrl.Header" path="257.PNG"/>
-	<watermark target="CHomeViewCtrl.Header" path="258.PNG"/>
-</watermarks>
 <!-- Documents -->
 <documents>
 	<!-- Home View -->
