--- a/Languages/default-gr.xml
+++ b/Languages/default-gr.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Greek Skin File --> <!-- This translation is based on default-en.xml SVN rev.7300 -->
+<!-- Shareaza Default Greek Skin File -->
+<!-- Translation based on default-en.xml SVN rev.7300 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -16,7 +17,7 @@
 		updatedBy="erimitis, Maria Tatsiou (v2.3.2.0)"
 		description="Shareaza Default Greek Skin File"
 		link="http://shareaza.sourceforge.net/"
-		email="erimitis(at)users(dot)sourceforge(dot)net"
+		email="erimitis(at)users.sourceforge.net"
 		version="2.3.2.0"
 		type="Language"
 		language="gr"
@@ -1585,12 +1586,6 @@
 		<item id="ID_WEBSERVICES_SHAREMONKEY" text="ShareMonkey"/>
 	</menu>
 </menus>
-
-<!-- Watermarks -->
-<watermarks>
-	<watermark target="CHomeViewCtrl.Header" path="257.PNG"/>
-	<watermark target="CHomeViewCtrl.Header" path="258.PNG"/>
-</watermarks>
 <!-- Documents -->
 <documents>
 	<!-- Home View -->
