--- a/Languages/default-sl-SI.xml
+++ b/Languages/default-sl-SI.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Slovenian Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
+<!-- Shareaza Default Slovenian Skin File -->
+<!-- Translation based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -16,7 +17,7 @@
 		updatedBy=""
 		description="Shareaza Default Slovenian Skin File"
 		link="http://mcdragon.blogspot.com/"
-		email="mcdragon(at)email(dot)si"
+		email="mcdragon(at)email.si"
 		version="2.2.2.12"
 		type="Language"
 		language="sl-SI"
@@ -1455,13 +1456,6 @@
 		<item id="ID_CHAT_CLEAR" text="Počisti _okno"/>
 	</menu>
 </menus>
-
-<!-- Watermarks -->
-<watermarks>
-	<watermark target="CHomeViewCtrl.Header" path="257.PNG"/>
-	<watermark target="CHomeViewCtrl.Header" path="258.PNG"/>
-</watermarks>
-
 <!-- Documents -->
 <documents>
 
