--- a/Languages/default-es-mx.xml
+++ b/Languages/default-es-mx.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Mexican Spanish Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
+<!-- Shareaza Default Mexican Spanish Skin File -->
+<!-- Translation based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -16,7 +17,7 @@
 		updatedBy="help"
 		description="Shareaza Default Mexican Spanish Skin File"
 		link="http://shareaza.sourceforge.net/"
-		email="luis.help(at)gmail(dot)com"
+		email="luis.help(at)gmail.com"
 		version="2.2.3.3"
 		type="Language"
 		language="es-mx"
@@ -1459,12 +1460,6 @@
 		<item id="ID_CHAT_CLEAR" text="Eliminar"/>
 	</menu>
 </menus>
-
-<!-- Watermarks -->
-<watermarks>
-	<watermark target="CHomeViewCtrl.Header" path="257.PNG"/>
-	<watermark target="CHomeViewCtrl.Header" path="258.PNG"/>
-</watermarks>
 
 <!-- Documents -->
 <documents>
