--- a/Languages/default-ja.xml
+++ b/Languages/default-ja.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Japanese Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
+<!-- Shareaza Default Japanese Skin File -->
+<!-- Translation based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -22,7 +23,7 @@
 		updatedBy=""
 		description="Shareaza Default Japanese Skin File"
 		link="http://www.dukedog.flnet.org/"
-		email="countnyan(at)hotmail(dot)com"
+		email="countnyan(at)hotmail.com"
 		version="2.2.4.0"
 		type="Language"
 		language="ja"
@@ -1489,12 +1490,6 @@
 		<item id="ImageViewer_Close" text="閉じる(_C)"/>
 	</menu>
 </menus>
-
-<!-- Watermarks -->
-<watermarks>
-	<watermark target="CHomeViewCtrl.Header" path="257.PNG"/>
-	<watermark target="CHomeViewCtrl.Header" path="258.PNG"/>
-</watermarks>
 <!-- Documents -->
 <documents>
 	<!-- Home View -->
