--- a/Languages/default-no.xml
+++ b/Languages/default-no.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Norwegian Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx --> <!-- Based on English CVS v1.76 -->
+<!-- Shareaza Default Norwegian Skin File -->
+<!-- Translation based on default-en.xml SVN rev.xxxx --> <!-- Based on English CVS v1.76 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -1454,12 +1455,6 @@
 		<item id="ID_CHAT_CLEAR" text="Oppdater vindu"/>
 	</menu>
 </menus>
-
-<!-- Watermarks -->
-<watermarks>
-	<watermark target="CHomeViewCtrl.Header" path="257.PNG"/>
-	<watermark target="CHomeViewCtrl.Header" path="258.PNG"/>
-</watermarks>
 
 <!-- Documents -->
 <documents>
