--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default English Skin File --> <!-- This translation is based on default-en.xml SVN rev.7300 -->
+<!-- Shareaza Default English Skin File -->
+<!-- Translation based on default-en.xml SVN rev.7300 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -1585,12 +1586,6 @@
       <item id="ID_WEBSERVICES_SHAREMONKEY" text="_ShareMonkey"/>
     </menu>
   </menus>
-
-  <!-- Watermarks -->
-  <watermarks>
-    <watermark target="CHomeViewCtrl.Header" path="257.PNG"/>
-    <watermark target="CHomeViewCtrl.Header" path="258.PNG"/>
-  </watermarks>
   <!-- Documents -->
   <documents>
     <!-- Home View -->
